Full registration and JWT generation, changed Entities definition to match spring and JPA guidelines: https://github.com/spring-guides/tut-spring-boot-kotlin#persistence-with-jpa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@
 spring.application.name=smart-garden
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tournaments.pai.app@gmail.com
+spring.mail.password=ENC(txAcDmC+UDOm9bu2N83ZaE/AvMBlAC8Q)
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.startssl.enable=true
+spring.mail.properties.mail.smtp.startssl.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
