--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -11,4 +11,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-server.contextPath=localhost:8080
+use-email-verification=false
+server.contextPath=http://localhost:8080
+jwt-secret-key=secretKey
