Code Review changes

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -11,6 +11,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-use-email-verification=false
+# Custom
+user-enabled-by-default=1
 server.contextPath=http://localhost:8080
 jwt-secret-key=secretKey
