Properties changed to work with heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Common configuration
+# Default configuration - used on heroku
 spring.application.name=smart-garden
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
@@ -6,10 +6,21 @@ spring.jpa.generate-ddl=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tournaments.pai.app@gmail.com
-spring.mail.password=ENC(txAcDmC+UDOm9bu2N83ZaE/AvMBlAC8Q)
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.startssl.enable=true
 spring.mail.properties.mail.smtp.startssl.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+# Datasource
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+# Custom
+is-user-enabled-by-default=0
+server.contextPath=https://smart-garden-rest.herokuapp.com/
+jwt-secret-key=${JWT_SECRET_KEY}
