--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -15,3 +15,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 is-user-enabled-by-default=1
 server.contextPath=http://localhost:8080
 jwt-secret-key=secretKey
+
+#Passwords
+spring.mail.password=ENC(txAcDmC+UDOm9bu2N83ZaE/AvMBlAC8Q)
