set db connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 # Default configuration - used on heroku
 spring.application.name=smart-garden
 spring.jpa.show-sql=true
+
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.database=sql_server
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -15,10 +21,11 @@ spring.mail.properties.mail.smtp.startssl.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # Datasource
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:sqlserver://smartgarden.database.windows.net:1433;database=SmartGarden;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=smartgarden@smartgarden
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
 # Custom
 is-user-enabled-by-default=0
