reduce memory usage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # Default configuration - used on heroku
+server.tomcat.threads.max = 2
 spring.application.name=smart-garden
 spring.jpa.show-sql=true
 
