enable batch insert

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.tomcat.threads.max = 2
 spring.application.name=smart-garden
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.batchsize=10
+spring.jpa.properties.hibernate.order_inserts=true
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
